kubernetes/easyshop-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: easyshop-service
  namespace: ecommerce
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30000
  selector:
    app: easyshop
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: easyshop
  namespace: ecommerce
spec:
  replicas: 2
  selector:
    matchLabels:
      app: easyshop
  template:
    metadata:
      labels:
        app: easyshop
    spec:
      containers:
        - name: easyshop
          image: kmvishal/tws-e-commerce-app:22
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          startupProbe:
            httpGet:
              path: /
              port: 3000
            failureThreshold: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 25
            periodSeconds: 20
